minor fixes to library display. made scrollbar on library pretty

--- a/web/src/app/css/library.component.css
+++ b/web/src/app/css/library.component.css
@@ -54,11 +54,6 @@
     overflow-y: hidden; */
 }
 
-@media screen and (min-width:1000px) {
-    .library-container {
-        flex-wrap:nowrap;
-    }
-}
 
 .preview {
     position: relative;
@@ -114,4 +109,47 @@
     border: 5px solid skyblue;
     border-radius: 5px;
     background: skyblue;
+    width: 100%;
+    height: 100%;
+    max-height: 256px;
+    max-width: 100%;
+}
+
+video {
+    max-height: 256px;
+}
+
+#divMain {
+    padding: 50px;
+    height: 1000px;
+    /* margin: 0px; */
+    max-width: 110%;
+    overflow-y: auto; 
+}
+
+
+@media screen and (min-width:992px) {
+    .library-container {
+        flex-wrap:wrap;
+    }
+    #divMain {
+        padding: 50px;
+        height: 1000px;
+        /* margin: -50px; */
+        max-width: 110%;
+        overflow-y: auto; 
+    }
+}
+
+@media screen and (min-width:1150px) {
+    .library-container {
+        flex-wrap:nowrap;
+    }
+    #divMain {
+        padding: 50px;
+        height: 1000px;
+        margin: -50px;
+        /* max-width: 110%; */
+        overflow-y: auto; 
+    }
 }
